[package]
name = "ketos_dapp"
version = "0.1.0"
publish = false
edition = "2018"

[[bin]]
name = "ketos_demo"
path = "src/main.rs"
doc = false

[lib]
name = "ketos_dapp"
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.release]
debug = false
lto = true
opt-level = "z"
panic = "abort"

[dependencies]
log = "0.4"
fluence = { version = "0.1.5", features = ["wasm_logger"] }
ketos = { git = "https://github.com/bakaoh/ketos", branch = "wasm" }
